--- a/karbon/yaml files/Windows VM session/fiesta_app.yaml
+++ b/karbon/yaml files/Windows VM session/fiesta_app.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: npm-fiesta
-        image: wessenstam/npm_fiesta
+        image: public.ecr.aws/n5p3f3u5/npm-fiesta:latest
         env:
           - name: DB_PASSWD
             value: fiesta
