--- a/karbon/yaml files/03-traefik-Deployment.yaml
+++ b/karbon/yaml files/03-traefik-Deployment.yaml
@@ -26,7 +26,7 @@ spec:
       serviceAccountName: traefik-ingress-controller
       containers:
         - name: traefik
-          image: wessenstam/traefik:v2.3
+          image: public.ecr.aws/n5p3f3u5/traefik:v2.3
           args:
             - --api.insecure
             - --accesslog
